[package]
name = "lit_node"
version = "2.1.3"
edition.workspace = true
default-run = "lit_node"

[features]
default = ["lit-actions"]
sign_test = [
    "lit-actions",
] #enables unsafe endpoint allowing a test to use a PK directly .
lit-actions = ["dep:lit-actions-grpc", "dep:lit-actions-server", "dep:libaes"]
lit-actions-server = [
    "lit-actions",
] # start internal lit_actions server for testing

testing = [
    "lit-actions-server",
    "lit-observability/testing",
] # enables testing features
proxy_chatter = [
    "lit-node-testnet/proxy_chatter",
    "lit-node-testnet/testing",
    "lit-node-testnet/lit-actions",
] # enables proxy http for testing

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
anyhow = "1.0"
apalis = { version = "0.6.0", features = ["tracing"] }
apalis-sql = { version = "0.6.0", features = ["sqlite", "tokio-comp"] }
arc-swap = "1.7"
async-std.workspace = true
async-trait.workspace = true
base64_light = "0.1"
bech32 = "0.11"
blsful.workspace = true
blstrs_plus = { version = "0.8", features = ["serde"] }
bulletproofs.workspace = true
bs58 = "0.5.0"
cc = "1.2.22"
ciborium = { version = "0.2" }
chrono = "0.4"
clap = { version = "4.5", features = ["cargo"] }
curve25519-dalek.workspace = true
data-encoding.workspace = true
decaf377.workspace = true
derive_builder = "0.20"
derive_more.workspace = true
digest = { version = "0.10", default-features = false, features = [
    "alloc",
    "oid",
] }
dotenv = "0.15.0"
ecdsa = { version = "0.16", features = ["arithmetic"] }
ed25519-dalek.workspace = true
ed448-goldilocks.workspace = true
elliptic-curve.workspace = true
ethabi.workspace = true
ethers.workspace = true
flume = "0.11"
frost-dkg = "0.3.3"
futures = "0.3"
glob = "0.3.1"
hd-keys-curves = { git = "https://github.com/LIT-Protocol/hd-keys-curves-wasm", package = "hd-keys-curves-wasm", rev = "5e0dcc1a6d8d08f2328d4716dca806db87f93748", default-features = false, features = [
    "bls",
    "k256",
    "p256",
    "p384",
    "curve25519",
    "ed448",
    "jubjub",
    "decaf377",
] }
hex.workspace = true
hex-literal = "0.4"
indicatif = "=0.15"
ipfs-hasher = "0.13.0"
iri-string = "0.6"
jsonpath-plus = "0.1.9"
jubjub.workspace = true
k256 = { version = "0.13", features = [
    "arithmetic",
    "sha256",
    "ecdsa",
    "serde",
    "ecdsa-core",
    "expose-field",
    "hash2curve",
    "schnorr",
], optional = false }
lazy_static = "1.5.0"
libaes = { version = "0.7", optional = true }
libsecp256k1 = { git = "https://github.com/LIT-Protocol/libsecp256k1", branch = "master", version = "0.7.1" }
lit-fast-ecdsa = { path = "../../lit-core/lit-fast-ecdsa" }
lit-frost = { git = "https://github.com/LIT-Protocol/lit-frost.git" }
lit-node-core = { path = "../lit-node-core" }
lit-sdk = { path = "../lit-sdk" }
lit-vrf = { path = "../../lit-core/lit-vrf" }
moka = { version = "0.12.7", features = ["future"] }
mpl-token-metadata = "1.2.10"
num_cpus = { version = "1.16.0" }
openssl = { version = "0.10.71" }
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24" }
opentelemetry-semantic-conventions = "0.15.0"
rand.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
reqwest.workspace = true
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0" }
# used to verify JWTs.  must match the version in the crate overrides at the bottom of this file
rsa = { git = "https://github.com/RustCrypto/RSA", tag = "v0.7.0-pre" }
rusqlite = { version = "0.32.0", features = ["backup"] }
p256 = { version = "0.13", features = [
    "arithmetic",
    "ecdsa-core",
    "expose-field",
    "hash2curve",
    "sha256",
    "serde",
], optional = false }
p384 = { version = "0.13", features = [
    "arithmetic",
    "serde",
], optional = false }
postcard = { version = "1.1.1", features = ["use-std"] }
prost = "0.13"
ripemd = "0.1.3"
scc = "2"
sdd.workspace = true
semver = "1.0.22"
serde.workspace = true
serde_json.workspace = true
serde_bare = "0.5"
sha2 = "0.10"
sha3 = "0.10"
siwe = "0.5.0"
siwe-recap = { git = "https://github.com/spruceid/siwe-recap" }
sodalite = "0.4"
solana-client = "1.9.19"
solana-program = "1.9.19"
solana-sdk = "1.9.19"
soteria-rs.workspace = true
spl-associated-token-account = "1.0.3"
temp-file = { version = "0.1.7" }
tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
tokio-retry = "0.3"
tonic = { version = "0.12", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.25" }
tracing-subscriber = { version = "0.3" }
ucan-capabilities-object = "0.1"
url.workspace = true
verifiable-share-encryption = { version = "0.3.0", git = "https://github.com/LIT-Protocol/verifiable-share-encryption", rev = "7eddfbe736369db596d0f302c72f1d76b0fd332d" }
visibility = "0.1.1"
vsss-rs.workspace = true
web3 = "0.19.0"
webauthn-rs-core = { git = "https://github.com/LIT-Protocol/webauthn-rs" }
webauthn-rs-proto = { git = "https://github.com/LIT-Protocol/webauthn-rs" }
webauthn-rs = { git = "https://github.com/LIT-Protocol/webauthn-rs" }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
xor_name = "3.0.0"
xorf = { version = "0.8.1", features = ["serde"] }
tokio-stream = "0.1.17"

[dependencies.lit-node-common]
path = "../lit-node-common"

[dependencies.lit-core]
path = "../../lit-core/lit-core"
features = ["ipfs", "chrono", "unix"]

[dependencies.lit-core-derive]
path = "../../lit-core/lit-core-derive"

[dependencies.lit-logging]
path = "../../lit-core/lit-logging"
features = ["service"]

[dependencies.lit-observability]
path = "../../lit-core/lit-observability"
features = ["channels"]

[dependencies.lit-api-core]
path = "../../lit-core/lit-api-core"
features = ["rocket-helper", "client-reqwest", "server"]

[dependencies.lit-blockchain]
path = "../../lit-core/lit-blockchain"

[dependencies.lit-recovery]
path = "../../lit-core/lit-recovery"

[dependencies.lit-attestation]
path = "../../lit-core/lit-attestation"
features = ["generate-via-service", "kdf"]

[dependencies.lit-actions-grpc]
path = "../../lit-actions/grpc"
optional = true

[dependencies.lit-actions-server]
path = "../../lit-actions/server"
optional = true

[dev-dependencies]
ctor = "0.4"
futures = "0.3"
# until MSRV 1.83+
generic-array.workspace = true
indoc = "2"
lit-ecdsa-wasm-combine = { git = "https://github.com/LIT-Protocol/lit-ecdsa-wasm-combine", branch = "0.2.0" }
maplit = "1"
once_cell = "1.20"
pretty_assertions = "1"
pretty_env_logger = "0.5"
rand_chacha.workspace = true
rstest = "0.26"
test-case = "3.1.0"
toml_edit = "0.22"
toxiproxy_rust = "*"
wiremock = "0.6.3"

[dev-dependencies.utils]
path = "../utils"

[dev-dependencies.lit-node-testnet]
path = "../lit-node-testnet"
features = ["lit-actions", "testing", "proxy_chatter"]
