[package]
name = "utils"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.23"
tracing = "0.1.40"

[[bin]]
name = "get-branch-commit"
path = "bin/get_branch_commit.rs"
