[package]
name = "lit-os-metrics"
version = "0.1.0"
edition.workspace = true

[dependencies]
char-device = { version = "0.16" }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "0.99" }
itertools = "0.13"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "metrics"] }
opentelemetry-semantic-conventions = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

[dependencies.lit-os-metrics-internal]
path = "../../lit-core/lit-os-metrics-internal"

[dependencies.lit-core]
path = "../../lit-core/lit-core"

[dependencies.lit-core-derive]
path = "../../lit-core/lit-core-derive"

[dependencies.lit-logging]
path = "../../lit-core/lit-logging"
features = ["service"]

[dependencies.lit-observability]
path = "../../lit-core/lit-observability"

[dependencies.lit-os-core]
path = "../lit-os-core"
